--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  json_theme: ^7.0.0+3
 
 dev_dependencies:
   flutter_test:
@@ -61,18 +62,24 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-    - images/all/
-    - images/beauty/
-    - images/jewelry/
-    - images/men fashion/
-    - images/shoes/
-    - images/women fashion/
+    - assets/themes/default_theme.json
+    - assets/themes/boutique_theme.json
+    - assets/themes/cafe_theme.json
+    - assets/themes/patisserie_theme.json
+    - assets/themes/pharmacie_theme.json
+    - assets/themes/superette_theme.json
+    - assets/
+    - assets/all/
+    - assets/beauty/
+    - assets/jewelry/
+    - assets/men fashion/
+    - assets/shoes/
+    - assets/women fashion/
     
-  #   - images/a_dot_ham.jpeg
+  #   - assets/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+  # https://flutter.dev/to/resolution-aware-assets
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
